--- a/Argen.Demo/Argen.Demo.csproj
+++ b/Argen.Demo/Argen.Demo.csproj
@@ -27,6 +27,7 @@
     <PackageReference Include="MonoGame.Extended.Content.Pipeline" Version="5.3.0" />
     <PackageReference Include="MonoGame.Framework.DesktopGL" Version="3.8.*" />
     <PackageReference Include="MonoGame.Content.Builder.Task" Version="3.8.*" />
+    <PackageReference Include="WebSocketSharp" Version="1.0.3-rc11" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Argen.Common\Argen.Common.csproj" />
